--- a/source/index.html
+++ b/source/index.html
@@ -25,9 +25,11 @@
         <label for="password">Password</label>
         <input oninput="ErrorCheck()" required id="password" name="password" type="password" required>
         <span style="color:red;">
-        <div id="needsNumber">* Your password needs atleast 1 number</div>
-        <div id="needsUppercase">* Your password needs atleast 1 Uppercase character</div>
-        <div id="needsSymbol">* Your password needs atleast 1 Symbol</div>
+        <div id="needsNumber">* Your password needs atleast 1 number!</div>
+        <div id="needsUppercase">* Your password needs atleast 1 Uppercase character!</div>
+        <div id="needsLowercase">* Your password needs atleast 1 Lowercase character!</div>
+        <div id="needsSymbol">* Your password needs atleast 1 Symbol!</div>
+        <div id="needsEnoughChars">* Your password needs atleast 8 Characters!</div>
         </span>
         </div>
 
