--- a/source/index.html
+++ b/source/index.html
@@ -18,29 +18,35 @@
 
         <div>
             <label for="email">Your email</label>
-            <input type="email" name="email" id="email" required>
+            <input onchange="EmailCheck()" type="email" name="email" id="email" required>
+            <span style="color: red;">
+            <div id="validEmail" class="hiddenItem">* Please enter a valid email!</div>
+            </span>
         </div>
 
         <div>
         <label for="password">Password</label>
-        <input oninput="ErrorCheck()" required id="password" name="password" type="password" required>
+        <input oninput="PasswordCheck()" onfocus="ShowErrors()" required id="password" name="password" type="password" required>
         <span style="color:red;">
-        <div id="needsNumber">* Your password needs atleast 1 number!</div>
-        <div id="needsUppercase">* Your password needs atleast 1 Uppercase character!</div>
-        <div id="needsLowercase">* Your password needs atleast 1 Lowercase character!</div>
-        <div id="needsSymbol">* Your password needs atleast 1 Symbol!</div>
-        <div id="needsEnoughChars">* Your password needs atleast 8 Characters!</div>
+        <div id="needsNumber" class="hiddenItem">* Your password needs atleast 1 number!</div>
+        <div id="needsUppercase" class="hiddenItem">* Your password needs atleast 1 Uppercase character!</div>
+        <div id="needsLowercase" class="hiddenItem">* Your password needs atleast 1 Lowercase character!</div>
+        <div id="needsSymbol" class="hiddenItem">* Your password needs atleast 1 Symbol!</div>
+        <div id="needsEnoughChars" class="hiddenItem">* Your password needs atleast 8 Characters!</div>
         </span>
         </div>
 
         <div>
             <label for="confirmPassword">Confirm your password</label>
-            <input type="password" name="confirmPassword" id="confirmPassword" required>
+            <input onchange="confirmPasswords()" type="password" name="confirmPassword" id="confirmPassword" required>
+            <span style="color:red;">
+                <div id="mustMatchPassword" class="hiddenItem">* The password does not match!</div>
+            </span>
         </div>
 
         <div>
-            <button type="reset">Reset</button>
-            <button type="submit">Submit</button>
+            <button type="reset" id="resetBtn">Reset</button>
+            <button type="submit" id="submitBtn">Submit</button>
         </div>
 
     </form>
