--- a/source/index.html
+++ b/source/index.html
@@ -45,7 +45,7 @@
         </div>
 
         <div>
-            <button onclick="resetButton()" type="reset" id="resetBtn">Reset</button>
+            <button onclick="submitBtn.disabled = true" type="reset" id="resetBtn">Reset</button>
             <button type="submit" id="submitBtn">Submit</button>
         </div>
 
