--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
 
         <div>
         <label for="password">Password <span style="color: red">*</span></label>
-        <input oninput="PasswordCheck()" onfocus="ShowErrors()" required id="password" name="password" type="password" required>
+        <input oninput="PasswordCheck()" onfocus="PasswordCheck()" id="password" name="password" type="password" required>
         <span style="color:red;">
         <div id="needsNumber" class="hiddenItem">* Your password needs atleast 1 number!</div>
         <div id="needsUppercase" class="hiddenItem">* Your password needs atleast 1 Uppercase character!</div>
